force-app/main/default/objects/Left_Main__ErrorHandlerLmr__c/Left_Main__ErrorHandlerLmr__c.object-meta.xml
<CustomObject>
    <description>Log for error Salesforce</description>
    <label>Error Handler</label>
    <nameField>
        <displayFormat>Error-{0000}</displayFormat>
        <label>Error Handler Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Handler</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>