force-app/main/default/objects/Left_Main__ErrorHandlerLmr__c/fields/Left_Main__LogDetail__c.field-meta.xml
<CustomField>
    <fullName>Left_Main__LogDetail__c</fullName>
    <description>Log Detail</description>
    <label>Log Detail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>