force-app/main/default/objects/Left_Main__ErrorHandlerLmr__c/fields/Left_Main__ProcessName__c.field-meta.xml
<CustomField>
    <fullName>Left_Main__ProcessName__c</fullName>
    <description>Process Name</description>
    <label>Process Name</label>
    <length>240</length>
    <type>Text</type>
</CustomField>