force-app/main/default/objects/Left_Main__ErrorHandlerLmr__c/fields/Left_Main__RelatedRecordId__c.field-meta.xml
<CustomField>
    <fullName>Left_Main__RelatedRecordId__c</fullName>
    <description>Record id of the related record.</description>
    <label>Related Record Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>