force-app/main/default/objects/Left_Main__ErrorHandlerLmr__c/listViews/Left_Main__All.listView-meta.xml
<ListView>
    <fullName>Left_Main__All</fullName>
    <columns>NAME</columns>
    <columns>Left_Main__ProcessName__c</columns>
    <columns>Left_Main__LogDetail__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>